# typescript-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  build.rs  package-lock.json  tsconfig.json
fixtures/: csg.ts  sample.ts
src/: cli.rs  compile.rs  lib.rs  main.rs  parse.rs
src/compiler/: mod.rs  scanner.rs  types.rs
src/compiler/ast/: check_flags.rs  ids.rs  kind.rs  mod.rs  node.rs  node_flags.rs  symbol.rs  symbol_flags.rs
src/compiler/diagnostics/: generated.rs
